syntax = "proto3";

import "google/protobuf/empty.proto";

package news;

enum Status {
  PUBLISHED = 0;
  DRAFT = 1;
  DELETED = 2;
}

message News {
  int32 id = 1;
  string title = 2;
  string body = 3;
  string postImage = 4;
  Status status = 5;
}

service NewsService {
  rpc GetAllNews(google.protobuf.Empty) returns (NewsList) {}
  rpc GetNews(NewsId) returns (News) {}
  rpc GetMultipleNews(MultipleNewsId) returns (NewsList) {}
  rpc DeleteNews(NewsId) returns (google.protobuf.Empty) {}
  rpc EditNews(News) returns (News) {}
  rpc AddNews(News) returns (News) {}
}

message NewsId { int32 id = 1; }

message MultipleNewsId { repeated NewsId ids = 1; }

message NewsList { repeated News news = 1; }